public/assets/css/style.css
/* ... */
.section-chiffre-affaire table thead th:last-child {
    border-radius: 0 8px 0 0;
}

.section-chiffre-affaire table th, .section-chiffre-affaire table td {
    border-bottom: 1px solid var(--bleu-tres-fonce);
}



/* ============================================================================================================================================================================ */

::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-track {
    background: var(--bs-primary);
}

::-webkit-scrollbar-thumb {
    background: var(--bs-secondary);
    border-radius: 4px;
}

/* ============================================================================================================================================================================ */

/* Messages */

.success-message , .success-message-php{
    color: var(--bs-success) !important;
    background-color: var(--success-bg) !important;
    padding: 1rem;
    border-radius: 8px;
}

.error-message ,.error-message-php{
    color: var(--bs-danger) !important;
    background-color: var(--danger-bg) !important;
    padding: 1rem;
    border-radius: 8px;
}
/* ============================================================================================================================================================================ */

li{list-style: none;}
a{text-decoration: none;}


/* ============================================================================================================================================================================ */

/* Intro et lien menu */

.intro p{
    font-size: 1.1rem;
    width: 100%;
    margin: auto;
    color: var(--texte);
}

.lien-intro, .avis ,.commander a , .modif-profil a{
    border-radius: 8px;
    font-size: 1.5rem;
    display: block;
    text-align: center;
}

.lien-intro, .avis{
    width: 15rem;
}

.lien-intro{
    margin: auto;
}

.lien-intro:hover , .lien-intro-entreprise:hover  ,.commander a:hover, .modif-profil a:hover{
    background-color: var(--dore-clair) !important;
}

.lien-intro-entreprise{
    width: 11rem;
    border-radius: 8px;
    font-size: 1.5rem;
    display: block;
    text-align: center;
    margin-top: 1rem;
}

.lien-creer-menu , .lien-creer-plat{
    border-radius: 8px;
    display: block;
    text-align: center;
    padding: 0.5rem;
    margin-left: 1rem;
    background-color: var(--dore);
}

.lien-creer-menu:hover , .lien-creer-plat:hover{
    background-color: var(--dore-clair)  !important;
}

.lien-creer-plat{
    margin-top: 1rem;
}

/* Section savoir faire  */

.carte-savoir-faire{
    justify-content: space-around;
}



.texte{
    background-color: var(--fond-carte);
    border-radius: 10px;
    padding: 2.5rem;
    justify-content: center;
}
.texte p{
    font-size: 1.25rem;
    color: var(--texte);
}

@keyframes translation-gauche{
    from{
        opacity: 0;
        transform : translateX(-500px);
    }
    to{
        opacity: 1;
        transform: translateX(0);
    }
}

@keyframes translation-droite{
    from{
        opacity: 0.5;
        transform : translateX(500px);
    }
    to{
        opacity: 1;
        transform: translateX(0);
    }
}

.img-carte1,.texte-carte2, .img-carte2 ,.texte-carte1{
    opacity: 0;
}

.img-carte1.visible ,.texte-carte2.visible{
    animation: translation-gauche 0.9s ease-in forwards;
}

.img-carte2.visible , .texte-carte1.visible{
    animation: translation-droite 0.9s ease-in forwards;
}

.img-carte2{
    margin-right: 2rem;
}

.texte-carte2 , .texte-carte1{
    width: 50%;
}

.img-carte1 ,.img-carte2{
    width: 40%;
    border-radius: 10px;
}

.img-carte1 ,.img-carte2 ,.texte-carte1 ,.texte-carte2, .section-avis, .swiper ,.lien-intro{
    box-shadow:var(--shadow);
}

/* ============================================================================================================================================================================ */

/* Carte avis */

.section-avis{
    width: 80%;
    border-radius: 10px;
}

.section-avis a{
    margin: auto;
}

.carte-avis{
    background-color: var(--fond-carte);
    /* width: 25%; */
    padding: 1rem;
    border-radius: 10px;
}

.avis{
    color: var(--bleu-nuit);
    border: 1px solid transparent;
}

.avis:hover{
    border : 1px solid var(--dore);
    color: var(--dore);
    background-color: var(--bleu-nuit) !important;
}

.fa-star{
    color: var(--dore);
}
/* =================================================================================================================================================================================== */
/* Section des menus */
.container-filtre-menus{
    width: 100vw;
}

.section-menus{
    width: 75%;
    border-radius: 10px;
    margin-left: auto;
    box-shadow: var(--shadow);
    background-color: var(--bs-primary);
}

.menus-main{
    padding-right: 3rem;
}

.carte-menu{
    background-color: var(--fond-carte);
    padding: 1rem;
    border-radius: 10px;
    width: 45%;
}

.en-tete-carte-menu a{
    background-color: var(--bs-secondary);
    padding: 0.3rem;
    border-radius: 8px;
    display: block;
    text-align: center;
    color: var(--bleu-nuit);
    margin-left: auto;
}

.en-tete-carte-menu a:hover{
    background-color: var(--dore-clair);
    transform: scale(1.1);
}

.prix{
    margin-left: auto;
    color: var(--bs-secondary);
    width: 50%;

}

.prix p{
    font-size: 1.25rem;
}

.theme-description{
    width: 55%;
}

.theme-description :nth-child(2){
    padding: 0.5rem;
}

.theme-description i , .theme-carte i{
    margin-left: 0.5rem;
    margin-right: 0.2rem;
}

.theme-description :first-child p{
    margin-left: 3rem;
}

.theme-carte {
    margin-bottom: 0 !important;
}

.theme-carte , .regime-carte {
    background-color: var(--bleu-moyen);
    padding: 0.5rem;
    color: var(--fond-carte);
    width: 8rem;
    border-radius: 8px;
    text-align:center ;
}

.nomenclature{
    margin-left: 2rem;
}
/* ... */

